dark mode added, fixing logo

--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,40 +1,51 @@
-.img{ /* longitud del simbolo principal */
-    width: 165px;
-    height: 100px;
+.img-claro {
+  /* longitud del simbolo principal */
+  width: 165px;
+  height: 100px;
+  margin-top: -10px;
+}
+.img-oscuro {
+  width: 165px;
+  height: 92px;
+  margin-top: -5px;
+}
+.dark-mode {
+  /* contenedor del modo oscuro/claro */
+  transition: background-image 0.5s ease-in-out, color 0.5s ease-in-out;
+  width: 65px;
 }
 
-.dark-mode {  /* contenedor del modo oscuro/claro */
-    border: 2px solid white;
-    transition: background-image 0.5s ease-in-out, color 0.5s ease-in-out; 
-    width: 65px;
+.fondo-oscuro {
+  /* fondo para modo oscuro */
+  background-image: url(https://www.shutterstock.com/image-vector/stars-moon-on-black-background-260nw-2009148419.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.fondo-oscuro { /* fondo para modo oscuro */
-    background-image: url(https://www.shutterstock.com/image-vector/stars-moon-on-black-background-260nw-2009148419.jpg);  
-    background-size: cover;                 
-    background-position: center;            
-    background-repeat: no-repeat;                 
+.fondo-claro {
+  /* fondo para modo claro */
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5ej-1HuylRdc-8eRZhJEJyGBerba9yhX4dg&s);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.fondo-claro { /* fondo para modo claro */
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5ej-1HuylRdc-8eRZhJEJyGBerba9yhX4dg&s);  
-    background-size: cover;                 
-    background-position: center;            
-    background-repeat: no-repeat;                 
+.circle {
+  /* permite la transicion para el circulo */
+  transition: transform 0.6s ease;
 }
 
-.circle { /* permite la transicion para el circulo */
-    transition: transform 0.6s ease;
+.active {
+  /* ejecuta la transicion para la movilidad del circulo */
+  transform: translateX(100%) !important;
 }
 
-.active { /* ejecuta la transicion para la movilidad del circulo */
-    transform: translateX(100%) !important;
+.icono {
+  /* centrado del simbolo */
+  margin-bottom: 2px;
 }
 
-.icono { /* centrado del simbolo */
-    margin-bottom: 2px;
-}
-
-.simbolo-idioma{
-    font-size: 22px;
+.simbolo-idioma {
+  font-size: 22px;
 }
